fix for overlapping elements on border bottom

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ h5, h4 {
   box-sizing: border-box;
   border-bottom: 1px solid #F3F4F5;
   padding: 11px 15px;
+  transform: translateY(-2px);
 }
 
 .primary {
